fix issue with overflow

--- a/src/components/tableHeader.module.css
+++ b/src/components/tableHeader.module.css
@@ -14,6 +14,7 @@
       display: flex;
       align-items: center;
       position: relative;
+      overflow: hidden;
       padding: var(--ml-component-spacing-3);
       overflow-wrap: break-word;
       border: 1px solid var(--ml-gray-200);
